src/tests/routes/crates/snapshots/integration__routes__crates__list__invalid_params_with_null_bytes-5.snap
---
source: src/tests/routes/crates/list.rs
expression: response.json()
---
{
  "errors": [
    {
      "detail": "Failed to deserialize query string: letter: string contains null byte"
    }
  ]
}
